[package]
name = "intervalsets"
version = "0.0.1"
authors = ["Dani Tseitlin <dani.tseitlin@gmail.com>"]
edition = "2018"

[lib]
name = "intervalsets"
crate-type = ["cdylib"]

[dependencies]
redis-module = { version="0.12.0", features = ["experimental-api"]}

[dev-dependencies]
redis = "0.20.0"
anyhow = "1.0.40"

[features]
# Workaround to allow cfg(feature = "test") in redismodue-rs dependencies:
# https://github.com/RedisLabsModules/redismodule-rs/pull/68
# This requires running the tests with `--features test`
test = ["redis-module/test"]