[package]
name = "intervalsets"
version = "0.0.1"
authors = ["Dani Tseitlin"]
edition = "2018"

[lib]
name = "intervalsets"
crate-type = ["cdylib"]
required-features = ["test","experimental-api", "integration"]

[dependencies]
redis-module = { version="0.26.0", features = ["experimental-api", "test"] }
serde_json = "1.0"
serde = "1.0"
libc = "0.2"

[dev-dependencies]
anyhow = "1.0.38"
redis = "0.21.0"

[features]
# Workaround to allow cfg(feature = "test") in redismodue-rs dependencies:
# https://github.com/RedisLabsModules/redismodule-rs/pull/68
# This requires running the tests with `--features test`
test = []
experimental-api = []
unittests = []
integration = []